# ANTsTorch

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
antstorch/: __init__.py
antstorch/architectures/: __init__.py  create_dense_model.py  create_normalizing_flow_model.py  create_resnet_model.py  create_unet_model.py
antstorch/deep_simr/: __init__.py  apply_lamnr_flows_whitener.py  apply_normalizing_simr_flows_whitener.py  lamnr_flows_whitener.py  latent_alignment.py  normalizing_simr_flows_whitener.py
antstorch/deepsimr/: __init__.py
antstorch/lamnr_flows/: __init__.py  alignment_losses.py  lamnr_flows_whitener.py  latent_alignment.py
antstorch/lamnr_flows/architectures/: __init__.py
antstorch/lamnr_flows/core/: __init__.py  base_trainer.py  lamnr_glow_tool_base.py
antstorch/lamnr_flows/misc/: __init__.py  latent_alignment.py
antstorch/lamnr_flows/scripts/: train_lamnr_flows_tabular.py  train_lamnr_glow_2d.py  train_lamnr_glow_3d.py
antstorch/lamnr_flows/tools/: __init__.py  lamnr_glow_tool_2d.py  lamnr_glow_tool_3d.py
antstorch/utilities/: __init__.py  brain_extraction.py  cerebellum_morphology.py  chexnet.py  cit168_labeling.py  correlation.py  cortical_thickness.py  dataframe_dataset.py  deep_atropos.py  deep_flash.py  desikan_killiany_tourville_labeling.py  device_manager.py  get_antstorch_data.py  get_pretrained_network.py  harvard_oxford_atlas_labeling.py  image_dataset.py  mri_modality_classification.py  mutual_information.py  nbm_labeling.py  preprocess_image.py  schedulers.py  t1_grader.py
deepsimlr/architectures/: __init__.py  create_dense_model.py  create_resnet_model.py  create_unet_model.py
deepsimlr/utilities/: __init__.py  chexnet.py  get_deepsimlr_data.py  get_pretrained_network.py  mri_modality_classification.py  tab_simlr.py
deepsimr/architectures/: create_dense_model.py  create_resnet_model.py  create_unet_model.py
deepsimr/utilities/: __init__.py  chexnet.py  get_deepsimr_data.py  get_pretrained_network.py  mri_modality_classification.py  tab_simr.py
docker/: Dockerfile  README.md  add_data.dockerfile
tests/: conftest.py  eval_conditional_gaussian.py  test_brain_extraction.py  test_glow_architectures.py  test_glow_trainer.py  test_image_dataset_and_scheduler.py  test_latent_alignment.py  test_schedulers.py  test_tab_losses.py  test_tabular_trainer.py  ukbb.py  ukbb_prep.R
tests/deep_simr_glow/: command.txt  command_eval.txt  eval_conditional_gaussian.py  summarize_alignment.py  train.py
tests/glow/: create_samples.py  train_glow_model_2d.py  train_glow_model_3d.py  train_glow_model_joint_2d.py
tests/nhanes/: train_nhanes.py
tests/nhanes/Data/: z_nh_list_2.csv  z_nh_list_3.csv  (+2 more)
tools/: convert_antspynet_weights_to_antstorch.py  convert_nbm_cit_cascades.py  convert_resnet_grader_weights.py  download_antstorch_data.py  return_antspynet_unet.py  return_antstorch_unet.py  tasks_registry.py  test_resnet_grader_weights.py
(+15 files in other folders)
